# artemis

./: .gitignore  README.md  pyproject.toml
Scratch/: scratch_testing.py
artemis/: __init__.py  artemis.py  run_model.py
artemis/core/: agent_ordering.py  agents.py  allegiances.py  choice_making.py  choice_set.py  competition.py  resource_dynamics.py  sharing.py
artemis/io/: __init__.py
artemis/io/input/: agent_schema.yml  config_schema.yml  config_yml.py
artemis/io/output/: derive_measures.py  export_data.py  graphmaker.py  outcome_visualization.py  printing.py  raw_data_extraction.py
docs/: agent_schema.md  config_schema.md  input_description.md
docs/html/source/: api.rst  conf.py  index.rst  input_format.rst  installation.rst  output_format.rst  (+1 more)
docs/markdown/: agent_schema.md  config_schema.md  input_description.md  output_description.md
examples/: default_config.yml  default_scenario.py  example_small.py
output/Scratch/: scratch_testing.py
scripts/: default_config.yml  default_scenario.py  default_scenario_vary_parameters.py
src/: ARTEMIS.py  README.md  agents.py  base_config.csv  base_config_with_adjusted_scenarios.csv  choice_set.py  input_descriptions.md  outcome_visualization.py  package_versions.txt  run_model.py
src/config/: package versions
src/input/: agent_schema.yml  config_schema.yml  config_yml.py
src/output/: output_description.md
src/tools/: data_extraction.py  export_data.py  outcome_visualization.py
tests/: test_default_scenario.py  test_forageragent.py  test_functionality.py
tests/resources/: default_config.yml
(+27 files in other folders)
