[project]
name = "ARTEMIS"
version = "0.0.1"
authors = [
  { name="Gerben IJntema", email="gerben.ijntema@wur.nl" },
]
description = "Agent Based Model to describe forager behaviour in both animal and human resource extraction"
readme = "README.md"
requires-python = ">=3.9.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.2",
    "plotly>=5.2.1",
    "pytest>=6.2.4",
    "pyyaml>=6.0",
    "jsonschema>=4.17.3",
    "json-schema-for-humans>=0.44.1",
    "sphinx>=6.1.3",
    "sphinx-mdinclude>=0.5.3",
    "sphinx-book-theme>=1.0.0",
]

[project.urls]
"Homepage" = "https://git.wur.nl/ecodyn/artemis"
